# VBA

./: CMakeLists.txt  LICENSE  app.js  index.html  main.cpp
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  vba.js.symbols
docker/: Dockerfile  build
docs/: app.js
run/: app.js  index.html  manifest.json
src/: gba.cpp  ui.cpp  vgafont8.h
